--- a/AR_Aframes/a.html
+++ b/AR_Aframes/a.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
+<html lang="ja">
+
 <head>
-  <!-- ① A-Frame を読み込む -->
+  <!-- ① A-Frame を読み込む -->  <!-- ② AR.js を読み込む -->
   <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-  <!-- ② AR.js を読み込む -->
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
 </head>
-<body style='margin: 0; overflow: hidden;'>
-<!-- ③ シーンを追加 -->
+
+<body style='margin: 0; overflow: hidden;'><!-- ③ シーンを追加 -->
 <a-scene embedded arjs>
+  <a-assets>
+    <a-asset-item id="leonald" src="model/leonald.glb"></a-asset-item>
+  </a-assets>
+
+  <a-marker type='pattern' url='./window/pattern-window.patt' marker>
+    <a-entity gltf-model="#leonald" modify-materials position="0 0 0" rotation="-90 0 0"
+    animation="property: rotation; to: -90 360 0; easing: linear; loop: true; dur: 10000;">
+    </a-entity>
+  </a-scene>
+  
   <!-- ④ マーカーを追加 ここから -->
   <a-marker preset="hiro">
     <!-- ⑤ オブジェクトの追加 -->
@@ -19,6 +30,6 @@
 
   <!-- ⑥ カメラを追加 -->
   <a-entity camera></a-entity>
-</a-scene>
+
 </body>
 </html>
