--- a/arjs2/index.html
+++ b/arjs2/index.html
@@ -16,7 +16,7 @@
  
   <!-- OBJ形式のCGモデルの読み込み -->
   <a-assets>
-    <a-asset-item id="glb" src="leonald.glb"></a-asset-item>   <!-- objファイル -->
+    <a-asset-item id="obj" src="leonald.glb"></a-asset-item>   <!-- objファイル -->
 
   </a-assets>
  
@@ -31,7 +31,6 @@
     <!-- マーカーの場所に OBJ 形式の 3DCG を置く -->
     <a-obj-model
       src="#obj"
-      mtl="#mtl"
       scale="0.005 0.005 0.005"
       position="0 0.5 0"
       animation="property:rotation; from:0 0 0; to:0 360 0; dur:3000; easing:linear; loop:true;">
