--- a/arjs2/index2.html
+++ b/arjs2/index2.html
@@ -28,6 +28,15 @@
                 animation="property:rotation; from:0 0 0; to:0 360 0; dur:3000; easing:linear; loop:true;">
             </a-entity>
         </a-marker>
+
+        <a-marker type='pattern' url='./leonald.patt' marker>
+            <!-- マーカーの場所に OBJ 形式の 3DCG を置く -->
+            <a-entity gltf-model="#obj"
+                animation="property:rotation; from:0 0 0; to:0 360 0; dur:3000; easing:linear; loop:true;">
+            </a-entity>
+        </a-marker>
+
+
         <!-- AR用のカメラを置く -->
         <a-entity camera></a-entity>
     </a-scene>
