--- a/arjs2/index3.html
+++ b/arjs2/index3.html
@@ -18,7 +18,7 @@
         </a-assets>
             <!-- マーカーの場所に OBJ 形式の 3DCG を置く -->
             <a-entity gltf-model="#obj"
-                animation="property:rotation; from:0 0 0; to:0 360 0; dur:3000; easing:linear; loop:true;">
+                animation="property:rotation; from:0 0 0; to:0 360 0; dur:3000; loop:true;">
             </a-entity>
         </a-marker>
 
