--- a/arjs2/index4.html
+++ b/arjs2/index4.html
@@ -12,7 +12,7 @@
             <a-assets>
                 <a-asset-item id="leonald" src="./leonald.glb"></a-asset-item>
             </a-assets>
-            <a-marker preset="custom" type='pattern' url="./lenoald.patt">
+            <a-marker preset="custom" type='pattern' url="./soukatu.patt">
               <a-entity gltf-model="leonald" scale="0.2 0.2 0.2" rotation="-20 0 0" animation-mixer></a-entity>
             </a-marker>
             <a-entity camera></a-entity>
