--- a/arjs2/index2-2.html
+++ b/arjs2/index2-2.html
@@ -19,19 +19,9 @@
         <!-- マーカーを登録（プリセットされている「人」マーカー） -->
         <a-marker preset="custom" type='pattern' url="./soukatu.patt">
             <!-- マーカーの場所に OBJ 形式の 3DCG を置く -->
-            <a-entity gltf-model="#obj"
-                animation="property:rotation; from:0 0 0; to:0 360 0; dur:3000; easing:linear; loop:true;">
+            <a-entity gltf-model="#obj" scale="0.2 0.2 0.2" rotation="-20 0 0" animation-mixer>
             </a-entity>
         </a-marker>
-
-        <a-marker type='pattern' url='./leonald.patt' marker>
-            <!-- マーカーの場所に OBJ 形式の 3DCG を置く -->
-            <a-entity gltf-model="#obj"
-                animation="property:rotation; from:0 0 0; to:0 360 0; dur:3000; easing:linear; loop:true;">
-            </a-entity>
-        </a-marker>
-
-
         <!-- AR用のカメラを置く -->
         <a-entity camera></a-entity>
     </a-scene>
