--- a/arjs2/index2-2.html
+++ b/arjs2/index2-2.html
@@ -17,9 +17,9 @@
             <a-asset-item id="obj" src="leonald.glb"></a-asset-item> <!-- objファイル -->
         </a-assets>
         <!-- マーカーを登録（プリセットされている「人」マーカー） -->
-        <a-marker preset="custom" type='pattern' url="./soukatu.patt">
+        <a-marker type='pattern' url='./soukatu.patt' marker>
             <!-- マーカーの場所に OBJ 形式の 3DCG を置く -->
-            <a-entity gltf-model="#obj" scale="0.2 0.2 0.2" rotation="-20 0 0" animation-mixer>
+            <a-entity gltf-model="#obj" scale="1 1 1" rotation="-20 0 0" animation-mixer>
             </a-entity>
         </a-marker>
         <!-- AR用のカメラを置く -->
