--- a/arjs2/index2-2.html
+++ b/arjs2/index2-2.html
@@ -17,7 +17,7 @@
             <a-asset-item id="obj" src="leonald.glb"></a-asset-item> <!-- objファイル -->
         </a-assets>
         <!-- マーカーを登録（プリセットされている「人」マーカー） -->
-        <a-marker type='pattern' url='arjs2/soukatu.patt' marker>
+        <a-marker type='pattern' url='soukatu.patt' marker>
             <!-- マーカーの場所に OBJ 形式の 3DCG を置く -->
             <a-entity gltf-model="#obj"
                 animation="property:rotation; from:0 0 0; to:0 360 0; dur:3000; easing:linear; loop:true;">
