--- a/sotugyou/index.html
+++ b/sotugyou/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body style="margin:0px; overflow:hidden;">
-    <!-- A-Frame ライブラリの読み込み -->
+    <!-- A-Frame ライブラリの読み込み※GIFはV0.9.0で動く -->
     <script src='https://aframe.io/releases/0.9.0/aframe.min.js'></script>
     <!-- AR.js ライブラリの読み込み -->
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.8/aframe/build/aframe-ar.js"></script>
     <script src="https://rawgit.com/mayognaise/aframe-gif-shader/master/dist/aframe-gif-shader.min.js"></script>
     <script src="shader-grid-glitch.js"></script>
     
@@ -41,6 +41,7 @@
             rotation="-90 0 0">
             </a-entity>
         </a-marker>
+
         <!-- AR用のカメラを置く -->
         <a-entity camera></a-entity>
     </a-scene>
