--- a/sotugyou/index.html
+++ b/sotugyou/index.html
@@ -16,7 +16,7 @@
     <script src="shader-grid-glitch.js"></script>
     
     <!-- デバッグ用の画面表示、VR用のボタンをそれぞれ非表示に -->
-    <a-scene embedded arjs="debugUIEnabled:false;" vr-mode-ui="enabled: false">
+    <!-- <a-scene embedded arjs="debugUIEnabled:false;" vr-mode-ui="enabled: false">-- >
 
         <!-- OBJ形式のCGモデルの読み込み -->
         <a-assets>
@@ -43,7 +43,7 @@
         </a-marker>
 
         <!-- AR用のカメラを置く -->
-        <a-entity camera></a-entity>
+            <a-entity camera></a-entity>
     </a-scene>
 </body>
 
